Correct signup field on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,7 @@
     background:#fff; 
     clear:left; 
     font:14px Helvetica,Arial,sans-serif; 
-    width: 600px;
+    width: 40%;
 }
 
 
@@ -361,4 +361,9 @@ input[name='q']::placeholder {
     .form-width {
         width: 70%;
     }
+
+    #mc_embed_signup {
+        width: 60%;
+    }
+    
 }
